# voice-log

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  db.py  models.py  openai_client.py  routes.py  settings.py
app/static/: styles.css
app/templates/: base.html  logs.html  upload.html
